# ProjetBanque

./: .gitignore  CMakeLists.txt  README.md
Boost_JSON/: CMakelists.txt  write_read_json.cpp
CLass_Comptes/: Class3.ilk  First_world_bank4.ilk  cmake_install.cmake
Class/: Class.sln
Class/Class/: Class.vcxproj  Source.cpp
Class_Banque/: CMakeLists.txt  Class1.ilk  Class_Banque.cpp  First_world_bank.ilk  cmake_install.cmake
Class_Client/: CMakeLists.txt  Class2.ilk  Class_Client.cpp  First_world_bank1.ilk  cmake_install.cmake
Class_Comptes/: CMakeLists.txt  Class_Comptes.cpp  Class_Comptes.h
Class_Transaction/: CMakeLists.txt
Class_Transactions/: CMakeLists.txt  Class4.ilk  Class_Transactions.cpp  Projet_Banque_Class4.ilk  cmake_install.cmake
Fonctions_general/: CMakeLists.txt  Fonctions_general.cpp
PROO/: CMakeLists.txt
PROO/Class_Banque/: CMakeLists.txt  Class_Banque.cpp
PROO/Class_Client/: Class_Client.h
PROO/Class_Comptes/: CMakeLists.txt  Class_Comptes.cpp
PROO/Fonction_General/: CMakeLists.txt  Class.cpp  Class.h
ProjectB/: CMakeLists.txt
ProjectB/Class_Banque/: Banque_for_JSON.cpp  Banque_for_JSON.hpp  CMakeLists.txt  Class_Banque.cpp  Class_Banque.h
ProjectB/Class_Client/: CMakeLists.txt  Class_Client.cpp  Class_Client.h  Customer_for_JSON.cpp  Customer_for_JSON.hpp
ProjectB/Class_Comptes/: CMakeLists.txt  Class_Comptes.cpp  Class_Comptes.h  Comptes_for_JSON.cpp  Comptes_for_JSON.hpp
ProjectB/Class_Transactions/: CMakeLists.txt  Class_Transactions.cpp  Class_Transactions.h  Transactions_for_JSON.cpp  Transactions_for_JSON.hpp
ProjectB/Fonctions_general/: Fonctions_general.cpp  Fonctions_general.h
ProjectB/ProjectB/: CMakeLists.txt  ProjectB.cpp  ProjectB.h
ProjectB/Wxwidget/Customer/: CMakeLists.txt  Customer.cpp  Customer.hpp  Customer_for_JSON.cpp  Customer_for_JSON.hpp
ProjectB/Wxwidget/testewidget/: Interface2_Projet.hpp
ProjetBanque/: CMakeLists.txt  README.md
ProjetBanque/Class_Banque/: CMakeLists.txt
ProjetBanque/Class_Client/: CMakeLists.txt
ProjetBanque/Class_Comptes/: CMakeLists.txt  Class_Comptes.cpp  Class_Comptes.h
ProjetBanque/Class_Transactions/: CMakeLists.txt
ProjetBanque/Fonctions_general/: CMakeLists.txt  Fonctions_general.cpp
Projet_Banque_part_Matthieu_Baum/Project_First_World_Banque/: CMakeLists.txt  Fonction_General.hpp
Projet_Banque_part_Matthieu_Baum/Project_First_World_Banque/Boost_JSON/: CMakeLists.txt  write_read_json.cpp
Projet_Banque_part_Matthieu_Baum/Project_First_World_Banque/Class/: CMakeLists.txt  Class_Client.cpp  Class_Client.hpp  Customer_for_JSON.cpp  Customer_for_JSON.hpp
Projet_Banque_part_Matthieu_Baum/Project_First_World_Banque/Sockets/: CMakeLists.txt
Projet_Banque_part_Matthieu_Baum/Project_First_World_Banque/Sockets/S_Client/: CMakeLists.txt  S_Client.cpp
Projet_Banque_part_Matthieu_Baum/Project_First_World_Banque/Sockets/Server/: CMakeLists.txt  Server.cpp
Wxwidget_part_Remi_Degraeve/: CMakeLists.txt
Wxwidget_part_Remi_Degraeve/Wxwidget1/: CMakeLists.txt  Interface2_Projet.hpp  Interface_Projet.cpp  Interface_Projet.hpp  My_new_Customer_dialog.cpp  My_new_Customer_dialog.hpp
